# nextroute

./: .gitignore  .golangci.yml  .prettierrc  LICENSE.md  README.md  VERSION  doc.go  go.mod  go.sum  model.go  model_checkedat.go  model_cluster.go  model_complexity.go  model_constraint.go  model_constraint_attributes.go  model_constraint_attributes_test.go  model_constraint_cluster_test.go  model_constraint_direct_precedence_test.go  model_constraint_direct_precedences.go  model_constraint_interleave.go  model_constraint_interleave_test.go  model_constraint_maximum_duration.go  model_constraint_maximum_duration_test.go  model_constraint_maximum_stops.go  model_constraint_maximum_stops_test.go  model_constraint_maximum_test.go  model_constraint_maximum_travel_duration.go  model_constraint_maximum_wait_stop.go  model_constraint_maximum_wait_stop_test.go  model_constraint_maximum_wait_vehicle.go  model_constraint_maximum_wait_vehicle_test.go  model_constraint_no_mix.go  model_constraint_no_mix_test.go  model_constraint_successor_test.go  model_constraint_successors.go  model_constraint_successors_test.go  model_data.go  model_directed_acyclic_graph.go  model_directed_acyclic_graph_test.go  model_expression.go  (+103 more)
.github/workflows/: go-lint.yml  go-test-lint.yml  go-test.yml  header.yml  json-lint.yml  markdown-lint.yml  python-test.yml  release-go.yml  release-python.yml  release.yml  wheels.yml
.nextmv/: add_header.py  build_wheel_binary.sh  check_header.py  compile_binaries.sh
check/: check.go  doc.go  format.go  observer.go  options.go  schema.go
check/schema/: schema.go
cmd/: .gitignore  input.json  main.go
common/: alias.go  alias_test.go  bools.go  bools_test.go  boundingbox.go  boundingbox_test.go  distance.go  duration.go  fast_haversine.go  haversine.go  intersect.go  location.go  location_test.go  maxmin.go  nsmallest.go  nsmallest_test.go  rangecheck.go  rangecheck_test.go  slices.go  speed.go  statistics.go  statistics_test.go  utils.go  utils_test.go
common/errors/: errors.go
factory/: alternates.go  constraint_attributes.go  constraint_capacity.go  constraint_capacity_test.go  constraint_cluster.go  constraint_distance_limit.go  constraint_interleave.go  constraint_max_duration.go  constraint_max_stops.go  constraint_max_travel_duration.go  constraint_max_wait_stop.go  constraint_max_wait_vehicle.go  constraint_no_mix.go  constraint_shift.go  constraint_start_timewindows.go  construction.go  data.go  defaults.go  defaults_test.go  doc.go  duration_groups_expression.go  factory.go  format.go  group.go  initialsolution.go  model.go  objective_activation.go  objective_capacity.go  objective_cluster.go  objective_earliness_lateness.go  objective_min_stops.go  objective_stop_balance.go  objective_travel_duration.go  objective_unplanned.go  objective_vehicles_duration.go  plan_units.go  precedence.go  services.go  stops.go  validate.go  (+1 more)
nextroute/: __about__.py  __init__.py  options.py  solve.py
nextroute/check/: __init__.py  schema.py
nextroute/factory/: options.py
nextroute/schema/: __init__.py  input.py  location.py  output.py  statistics.py  stop.py  vehicle.py
observers/: doc.go  performance_observer.go  solve_observer.go  solve_performance_observer.go
schema/: custom_data.go  custom_data_test.go  fleet.go  fleet_defaults.go  fleet_test.go  input.go  output.go
src/: README.md  main.py  output1.json
src/nextroute/: __about__.py  __init__.py  base_model.py  options.py  solve.py  version.py
src/tests/: test_options.py
tests/: __init__.py
tests/check/: input.json  input.json.golden  main.go  main_test.go
tests/custom_constraint/: input.json  input.json.golden  main.go  main_test.go
tests/custom_matrices/: input.json.golden  main.go  main_test.go
(+141 files in other folders)
